deployment/global/capi/byoh/k8sinstallerconfigtemplate.yaml
# Copyright (c) 2023 Schubert Anselme <schubert@anselm.es>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

---
apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
kind: K8sInstallerConfigTemplate
metadata:
  name: byoh-
  namespace: default
spec:
  template:
    spec:
      bundleRepo: projects.registry.vmware.com/cluster_api_provider_bringyourownhost
      bundleType: k8s
# ---
# apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
# kind: K8sInstallerConfigTemplate
# metadata:
#   name: byoh-control-plane
#   namespace: default
# spec:
#   template:
#     spec:
#       bundleRepo: projects.registry.vmware.com/cluster_api_provider_bringyourownhost
#       bundleType: k8s
# ---
# apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
# kind: K8sInstallerConfigTemplate
# metadata:
#   name: byoh-md-0
#   namespace: default
# spec:
#   template:
#     spec:
#       bundleRepo: projects.registry.vmware.com/cluster_api_provider_bringyourownhost
#       bundleType: k8s
